<resources>
    <string name="app_name">KtxWithMVVMExample</string>

    <string name="str_no_internet">Sorry there appears to be a problem with your internet connection, please try again later.</string>
    <string name="str_server_error">We are unable to connect with server, please try again later.</string>
    <string name="str_request_cancelled">Your request has been cancelled.</string>
    <string name="str_link">Link</string>
    <string name="str_description">Description</string>
    <string name="str_details">Details</string>
    <string name="str_source">Source</string>
</resources>
