<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="DetailActivityBinding">

        <import type="com.example.ktxexample.utils.binding.FeedBindingUtils" />

        <variable
            name="viewModel"
            type="com.example.ktxexample.viewmodel.DetailActivityVM" />

        <variable
            name="feed"
            type="com.example.ktxexample.model.response.feed_model.BaseNewsFeed" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageClose"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="20dp"
                android:onClick="@{()->viewModel.onCloseClick()}"
                android:scaleType="fitXY"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="44dp"
                app:imageUrl="@{feed.imgContent.url}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@{FeedBindingUtils.setTitle(feed)}"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <TextView
                android:id="@+id/textCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-seri"
                android:text="@{feed.country}"
                android:textColor="#4B4848"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitle" />

            <TextView
                android:id="@+id/textDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/str_details"
                android:textColor="#000000"
                android:textSize="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCountry" />

            <TextView
                android:id="@+id/textSourceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/str_source"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDetail" />

            <TextView
                android:id="@+id/textSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-seri"
                android:text="@{feed.source}"
                android:textColor="#4B4848"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSourceTitle" />

            <TextView
                android:id="@+id/textLinkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/str_link"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSource" />

            <TextView
                android:id="@+id/textLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:fontFamily="sans-seri"
                android:onClick="@{()->viewModel.onLinkClick(feed.link)}"
                android:text="@{feed.link}"
                android:textColor="#4B4848"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLinkTitle"
                android:focusable="true" />

            <TextView
                android:id="@+id/textDescTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/str_description"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLink" />

            <TextView
                android:id="@+id/textDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-seri"
                android:text="@{feed.description}"
                android:textColor="#4B4848"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescTitle" />

            <TextView
                android:id="@+id/textPubdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-seri"
                android:hint="@string/app_name"
                android:textColor="#4B4848"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDesc"
                app:text="@{feed.pubDate}" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#32008577"
                android:fontFamily="sans-serif-black"
                android:padding="5dp"
                android:text="@={viewModel.titleLiveData}"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPubdate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
